--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,8 @@
   "name": "gulp-tpl",
   "description": "",
   "main": "index.js",
-  "authors": [
-    "Sergey Khmelevskoy <sergey@khmelevskoy.co>"
-  ],
   "license": "ISC",
-  "homepage": "https://github.com/dpmango/discount",
+  "homepage": "https://github.com/dpmango/john",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -15,7 +12,6 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "v4.0.0-alpha.6",
     "jquery-validation": "^1.17.0",
     "slick-carousel": "^1.7.1",
     "jquery-mask-plugin": "^1.14.11",
@@ -23,6 +19,7 @@
     "svg4everybody": "^2.1.9",
     "viewport-units-buggyfill": "^0.6.2",
     "scrollMonitor": "^1.2.4",
-    "barba.js": "luruke/barba.js#^1.0.0"
+    "barba.js": "luruke/barba.js#^1.0.0",
+    "handlebars": "^4.0.11"
   }
 }
