--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.1",
     "gulp-consolidate": "^0.2.0",
+    "gulp-data": "^1.3.1",
     "gulp-eslint": "^4.0.0",
     "gulp-front-matter": "^1.3.0",
     "gulp-htmlhint": "^0.3.1",
